# flow-field-texture-builder

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  pyproject.toml  vcpkg.json
.devcontainer/: Dockerfile  configure-linux.sh  configure-proxy.sh  devcontainer.json  initialize-proxy.sh  post-create.sh  proxy-env.sh  test-proxy-env.sh
cmake/: flowfield-auto-triplet.cmake  flowfield-vcpkg-toolchain.cmake
cmake/vcpkg-triplets/: arm64-linux-flowfield.cmake  arm64-osx-flowfield.cmake  arm64-windows-flowfield.cmake  flowfield-common.cmake  x64-linux-flowfield.cmake  x64-osx-flowfield.cmake  x64-windows-flowfield.cmake
include/: cartesian3.h  flow_field.h  flow_field_builder.h  geo_data_source.h
modules/quikgrid/: CMakeLists.txt  contour.cpp  gridxtyp.cpp  scatdata.cpp  surfgrid.cpp  xpand.cpp  xpand_context.cpp
modules/quikgrid/include/: contour.h  gridxtyp.h  scatdata.h  surfgrid.h  xpand_context.h
python/flow_field_texture_builder/: __init__.py
src/: cartesian3.cpp  flow_field.cpp  flow_field_builder.cpp  geo_data_source.cpp  main.cpp
src/python_binding/: c_api.cpp
tests/: cmake_auto_triplet_test.cmake  flow_field_builder_test.cpp  flow_field_cli_adapter_test.cpp  python_binding_smoke.py  quikgrid_context_test.cpp  uv_project_config_test.py
