[build-system]
requires = ["scikit-build-core>=0.10"]
build-backend = "scikit_build_core.build"

[project]
name = "flow-field-texture-builder"
version = "0.1.0"
description = "Build packed flow-field UV and seed textures from scattered velocity arrays."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = ["numpy>=1.24"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: GIS",
]

[dependency-groups]
dev = [
    "build>=1.3.0",
    "pytest>=8.0.0",
]

[tool.scikit-build]
minimum-version = "0.10"
build-dir = "build/{wheel_tag}"
wheel.packages = ["python/flow_field_texture_builder"]

[tool.scikit-build.cmake.define]
FLOW_FIELD_BUILD_PYTHON = "ON"
FLOW_FIELD_BUILD_CLI = "OFF"
BUILD_TESTING = "OFF"
CMAKE_TOOLCHAIN_FILE = "cmake/flowfield-vcpkg-toolchain.cmake"
VCPKG_OVERLAY_TRIPLETS = "cmake/vcpkg-triplets"

[tool.uv]
package = true
cache-keys = [
    { file = "pyproject.toml" },
    { file = "CMakeLists.txt" },
    { file = "vcpkg.json" },
    { file = "cmake/**/*.cmake" },
    { file = "include/**/*.h" },
    { file = "src/**/*.cpp" },
    { file = "modules/quikgrid/**/*.cpp" },
    { file = "modules/quikgrid/**/*.h" },
    { file = "python/flow_field_texture_builder/**/*.py" },
]
